3/18/2004
	- Fix NullPointerExceptions caused by bad empty Record handling.
	  (reported by Dharmveer Jain <dharmveer_jain@yahoo.com>)

3/16/2004
	- 1.6.1 released.
	- When loading master files with $INCLUDE statements, the included
	  files should be opened relative to the current directory, not
	  the directory of the parent file.

3/12/2004
	- Make it possible to use a Tokenizer without leaving files open.

3/4/2004 - 3/12/2004
	- Add support for more record types (AFSDB, GPOS, ISDN, MB, MD, MF, MG,
	  MINFO, MR, NSAP, NSAP-PTR, NULL, PX, RT, WKS, X25).

3/3/2004
	- Cached NXDOMAINs were ignored, which caused extra queries to
	  be sent (reported by Damon Hart-Davis <d@hd.org>).

2/25/2004
	- Attempting to load a zone without specifying an origin failed.

2/24/2004
	- 1.5.2 released.

2/3/2004
	- Message.isSigned() should return true if we signed the Message
	  with a TSIG.
	  (reported by Shobana Sampath <shobanas@cisco.com>)
	- Implement NSEC, DNSKEY, and RRSIG record types.  (loosely based on
	  a patch from David Blacka <davidb@verisignlabs.com>).
	- Change the representations of sections, rcodes, opcodes, flags,
	  and credibility to int.

1/28/2004
	- Attempt to better deal with OutOfMemoryErrors when creating
	  threads during the resolution process.
	  (reported by Joseph Shraibman <jks@iname.com>)

1/27/2004
	- Change the representation of a TSIG error from a byte to an int.
	- Improve error messages from failed Lookups; treat SERVFAIL
	  as a temporary failure, not an unrecoverable error.
	  (Joseph Shraibman <jks@iname.com>)

1/16/2004
	- The master file reader should propagate TTLs through $INCLUDE
	  statements. (David Blacka <davidb@verisignlabs.com>)

1/12/2004
	- Add a MANIFEST to the jar file containing implementation name and
	  version. (Harel Efraim <harel.efraim@nominum.com>)

1/11/2004
	- Fix a couple minor bugs found by FindBugs
	  (http://www.cs.umd.edu/~pugh/java/bugs/)

1/8/2004
	- 1.5.1 released.